kkp-4: fixed spacing, popup title font size

--- a/src/components/core/ButtonDescription/style.scss
+++ b/src/components/core/ButtonDescription/style.scss
@@ -1,7 +1,7 @@
 
 @import '../../../style/variables.scss';
 .buttonDescWrapper {
-  .button {
+  button.button {
     color: $white;
     font-family: OpenSans-Bold, arial, sans-serif;
     font-size: 1.5rem;
